完善线程异常捕获

--- a/Read/ReadMeWiki/00.方案实践/03.崩溃捕获设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/03.崩溃捕获设计实践.md
@@ -1,24 +1,321 @@
 #### 目录介绍
-- 概述
-    - 项目背景
-    - 设计目标
-- 方案设计
-    - 整体架构
-        - 架构设计图
-        - UML设计图
-    - 功能设计
-        - 关键流程图
-        - 接口设计图
-        - 模块间依赖关系
-- 其他设计（Optional）
-    - 性能设计
-    - 稳定性设计
-    - 灰度设计
-    - 降级设计
-    - 异常设计
-- 排期与计划
-    - 排期节点
-    - 落实反馈
+- 01.整体概述
+    - 1.1 项目背景
+    - 1.2 遇到问题
+    - 1.3 基础概念
+    - 1.4 设计目标
+- 02.App崩溃流程
+    - 2.1 为何崩溃
+    - 2.2 Java崩溃流程
+    - 2.3 Native崩溃流程
+    - 2.4 崩溃日志处理
+    - 2.5 崩溃流程分析
+- 03.崩溃处理入口
+    - 3.1 Java处理异常入口
+    - 3.2 异常处理常用api
+    - 3.3 注意事项说明
+    - 3.5 理解异常栈轨迹链
+- 04.崩溃监听思路
+    - 4.1 实现崩溃监听
+    - 4.2 处理捕获异常
+    - 4.4 崩溃日志收集
+    - 4.8 崩溃重启实践
+- 05.方案基础设计
+    - 5.1 整体架构图
+    - 5.2 UML设计图
+    - 5.3 关键流程图
+    - 5.4 接口设计图
+    - 5.5 模块间依赖关系
+- 06.其他设计说明
+    - 6.1 性能设计
+    - 6.2 稳定性设计
+    - 6.3 灰度设计
+    - 6.4 降级设计
+    - 6.5 异常设计
+- 07.其他说明介绍
+    - 7.1 参考链接
+
+
+
+### 02.App崩溃流程
+#### 2.1 为何崩溃
+- 线程中抛出异常以后的处理逻辑
+    - 一旦线程出现抛出异常，并且我们没有捕捉的情况下，JVM将调用Thread中的dispatchUncaughtException方法把异常传递给线程的未捕获异常处理器。
+- 既然Android遇到异常会发生崩溃，然后找一些哪里用到设置setDefaultUncaughtExceptionHandler，即可定位到RuntimeInit类。
+    - 即在这个里面设置异常捕获handler，发生异常之后，会杀死应用app。
+
+
+
+#### 2.2 处理崩溃流程
+##### 2.2.1 崩溃的大概流程
+- 然后看一下RuntimeInit类，由于是java代码，所以首先找main方法入口。代码如下所示
+    ``` java
+    public static final void main(String[] argv) {
+        commonInit();
+    }
+    ```
+- 然后再来看一下commonInit()方法，看看里面做了什么操作？
+    - 可以发现这里调用了setDefaultUncaughtExceptionHandler方法，设置了自定义的Handler类
+    ``` java
+    protected static final void commonInit() {
+        Thread.setDefaultUncaughtExceptionHandler(new KillApplicationHandler(loggingHandler));
+    }
+    ```
+- 接着看一下KillApplicationHandler类，可以发现该类实现了Thread.UncaughtExceptionHandler 接口
+    - 这个就是杀死app逻辑具体的代码。可以看到当出现异常的时候，在finally中会退出进程操作。
+    ``` java
+    private static class KillApplicationHandler implements Thread.UncaughtExceptionHandler {
+        @Override
+        public void uncaughtException(Thread t, Throwable e) {
+            try {
+                ActivityManager.getService().handleApplicationCrash(
+                        mApplicationObject, new ApplicationErrorReport.ParcelableCrashInfo(e));
+            } finally {
+                Process.killProcess(Process.myPid());
+                System.exit(10);
+            }
+        }
+    }
+    ```
+- 得出结论
+    - 其实在fork出app进程的时候，系统已经为app设置了一个异常处理，并且最终崩溃后会直接导致执行该handler的finally方法最后杀死app直接退出app。如果你要自己处理，你可以自己实现Thread.UncaughtExceptionHandler。
+
+
+##### 2.2.2 崩溃日志的记录
+- 在KillApplicationHandler类中的uncaughtException方法，可以看到ActivityManager.getService().handleApplicationCrash被调用，那么这个是用来做什么的呢？
+    - ActivityManager.getService().handleApplicationCrash-->ActivityManagerService.handleApplicationCrash-->handleApplicationCrashInner方法
+- 从下面可以看出,若传入app为null时,processName就设置为system_server
+    ``` java
+    public void handleApplicationCrash(IBinder app,
+            ApplicationErrorReport.ParcelableCrashInfo crashInfo) {
+        ProcessRecord r = findAppProcess(app, "Crash");
+        final String processName = app == null ? "system_server"
+                : (r == null ? "unknown" : r.processName);
+        handleApplicationCrashInner("crash", r, processName, crashInfo);
+    }
+    ```
+- 然后接着看一下handleApplicationCrashInner方法做了什么
+    - 调用addErrorToDropBox将应用crash，进行封装输出。那么主要输出什么内容呢，待完善中……
+    ``` java
+    void handleApplicationCrashInner(String eventType, ProcessRecord r, String processName,
+            ApplicationErrorReport.CrashInfo crashInfo) {
+
+        addErrorToDropBox(eventType, r, processName, null, null, null, null, null, crashInfo);
+
+        mAppErrors.crashApplication(r, crashInfo);
+    }
+    ```
+
+
+
+#### 2.3 Native崩溃流程
+- native_crash，顾名思义，就是native层发生的crash。其实他是通过一个NativeCrashListener线程去监控的。
+    ```
+    final class NativeCrashListener extends Thread {
+        @Override
+        public void run() {
+            try {
+                //1.一直循环地读peerFd文件,若发生存在,则进入consumeNativeCrashData
+                while (true) {
+                    try {
+                        if (peerFd != null) {
+                            //2.进入native crash数据处理流程
+                            consumeNativeCrashData(peerFd);
+                        }
+                    } 
+                }
+            }
+        }
+
+        void consumeNativeCrashData(FileDescriptor fd) {
+            try {
+                    //3.启动NativeCrashReporter作为上报错误的新线程
+                    final String reportString = new String(os.toByteArray(), "UTF-8");
+                    (new NativeCrashReporter(pr, signal, reportString)).start();
+            } catch (Exception e) {
+            }
+        }
+    }
+    ```
+- 上报native_crash的线程-->NativeCrashReporter:
+    ``` java
+    class NativeCrashReporter extends Thread {
+        @Override
+        public void run() {
+            try {
+                //1.包装崩溃信息
+                CrashInfo ci = new CrashInfo();
+                //2.转到ams中处理,跟普通crash一致,只是类型不一样
+                mAm.handleApplicationCrashInner("native_crash", mApp, mApp.processName, ci);
+            } catch (Exception e) {
+            }
+        }
+    }
+    ```
+- native crash跟到这里就结束了，后面的流程就是跟application crash一样，都会走到addErrorToDropBox中，这个最后在说。
+
+
+
+#### 2.4 崩溃日志处理
+- 为什么说addErrorToDropBox是殊途同归呢，因为无论是crash、native_crash、ANR或是wtf，最终都是来到这里，交由它去处理。那下面我们就来揭开它的神秘面纱吧。
+    ``` java
+    public void addErrorToDropBox(……) {
+        //只有这几种类型的错误,才会进行上传
+        final boolean shouldReport = ("anr".equals(eventType)
+                || "crash".equals(eventType)
+                || "native_crash".equals(eventType)
+                || "watchdog".equals(eventType));
+        //1.如果DropBoxManager没有初始化,或不是要上传的类型,则直接返回
+        if (dbox == null || !dbox.isTagEnabled(dropboxTag)&& !shouldReport)
+            return;
+        //2.添加一些头部log信息 
+        //3.添加崩溃进程和界面的信息
+        //4.添加进程的状态到dropbox中
+        //5.将dataFile文件定入dropbox中,一般只有anr时,会将traces文件通过该参数传递进来者,其他类型都不传.
+        //6.如果是crash类型,会传入crashInfo,此时将其写入dropbox中
+        if (shouldReport) {
+            synchronized (mErrorListenerLock) {
+                try {
+                    //7.关键,在这里可以添加一个application error的接口，用来实现应用层接收崩溃信息
+                    mIApplicationErrorListener.onError(fEventType,
+                            packageName, fProcessName, subject, dropboxTag + "-" + uuid, crashInfo);
+                } 
+            }
+        }
+    }
+    ```
+
+
+#### 2.5 系统崩溃分析
+
+
+
+### 03.崩溃处理入口
+#### 3.1 Java处理异常入口
+- UncaughtExceptionHandler接口，官方介绍为：
+    ``` java
+    @FunctionalInterface
+    public interface UncaughtExceptionHandler {
+        void uncaughtException(Thread t, Throwable e);
+    }
+    ```
+    - Interface for handlers invoked when a Thread abruptly terminates due to an uncaught exception.
+    - When a thread is about to terminate due to an uncaught exception the Java Virtual Machine will query the thread for its UncaughtExceptionHandler using getUncaughtExceptionHandler() and will invoke the handler's uncaughtException method, passing the thread and the exception as arguments. If a thread has not had its UncaughtExceptionHandler explicitly set, then its ThreadGroup object acts as its UncaughtExceptionHandler. If the ThreadGroup object has no special requirements for dealing with the exception, it can forward the invocation to the default uncaught exception handler.
+- 翻译后大概的意思是
+    - UncaughtExceptionHandler接口用于处理因为一个未捕获的异常而导致一个线程突然终止问题。
+    - 当一个线程因为一个未捕获的异常即将终止时，Java虚拟机将通过调用getUncaughtExceptionHandler() 函数去查询该线程的UncaughtExceptionHandler并调用处理器的 uncaughtException方法将线程及异常信息通过参数的形式传递进去。如果一个线程没有明确设置一个UncaughtExceptionHandler，那么ThreadGroup对象将会代替UncaughtExceptionHandler完成该行为。如果ThreadGroup没有明确指定处理该异常，ThreadGroup将转发给默认的处理未捕获的异常的处理器。
+- 线程出现未捕获异常后，JVM将调用Thread中的dispatchUncaughtException方法把异常传递给线程的未捕获异常处理器。
+    ``` java
+    public final void dispatchUncaughtException(Throwable e) {
+        getUncaughtExceptionHandler().uncaughtException(this, e);
+    }
+    public UncaughtExceptionHandler getUncaughtExceptionHandler() {
+        return uncaughtExceptionHandler != null ? uncaughtExceptionHandler : group;
+    }
+    ```
+
+
+#### 3.2 异常处理常用api
+##### 3.2.1 设置uncaughtExceptionPreHandler
+- Thread中存在两个UncaughtExceptionHandler。一个是静态的defaultUncaughtExceptionHandler，另一个是非静态uncaughtExceptionHandler。
+    ``` java
+    private volatile UncaughtExceptionHandler uncaughtExceptionHandler;
+    private static volatile UncaughtExceptionHandler defaultUncaughtExceptionHandler;
+    ```
+    - defaultUncaughtExceptionHandler:设置一个静态的默认的UncaughtExceptionHandler。来自所有线程中的Exception在抛出并且未捕获的情况下，都会从此路过。进程fork的时候设置的就是这个静态的defaultUncaughtExceptionHandler，管辖范围为整个进程。
+    - uncaughtExceptionHandler:为单个线程设置一个属于线程自己的uncaughtExceptionHandler，辖范围比较小。
+    ``` java
+    //为单个线程设置一个属于线程自己的uncaughtExceptionHandler，捕获单个线程异常。设置后，线程可以完全控制它对未捕获到的异常作出响应的处理。
+    thread.setUncaughtExceptionHandler(new Thread.UncaughtExceptionHandler() {
+        @Override
+        public void uncaughtException(Thread t, Throwable e) {
+            System.out.println("捕获单个线程："+t.toString() + " throwable : " + e.getMessage());
+        }
+    });
+    //所有线程中的Exception在抛出并且未捕获的情况下，都会从此路过
+    Thread.setDefaultUncaughtExceptionHandler(new Thread.UncaughtExceptionHandler() {
+        @Override
+        public void uncaughtException(Thread t, Throwable e) {
+            System.out.println("捕获所有线程："+t.toString() + " throwable : " + e.getMessage());
+        }
+    });
+    ```
+
+
+##### 3.2.2 没有设置uncaughtExceptionPreHandler
+- 没有设置uncaughtExceptionHandler怎么办？如果没有设置uncaughtExceptionHandler，将使用线程所在的线程组来处理这个未捕获异常。线程组ThreadGroup实现了UncaughtExceptionHandler，所以可以用来处理未捕获异常。ThreadGroup类定义：
+    ``` java
+    private ThreadGroup group;
+    //可以发现ThreadGroup类是集成Thread.UncaughtExceptionHandler接口的
+    class ThreadGroup implements Thread.UncaughtExceptionHandler{}
+    ```
+- 然后看一下ThreadGroup中实现uncaughtException(Thread t, Throwable e)方法，代码如下
+    - 默认情况下，线程组处理未捕获异常的逻辑是，首先将异常消息通知给父线程组，然后尝试利用一个默认的defaultUncaughtExceptionHandler来处理异常，
+    - 如果没有默认的异常处理器则将错误信息输出到System.err。也就是JVM提供给我们设置每个线程的具体的未捕获异常处理器，也提供了设置默认异常处理器的方法。
+    ``` java
+    public void uncaughtException(Thread t, Throwable e) {
+        if (parent != null) {
+            parent.uncaughtException(t, e);
+        } else {
+            //返回线程由于未捕获到异常而突然终止时调用的默认处理程序。如果返回值为 null，则没有默认处理程序。
+            Thread.UncaughtExceptionHandler ueh = Thread.getDefaultUncaughtExceptionHandler();
+            if (ueh != null) {
+                ueh.uncaughtException(t, e);
+            } 
+        }
+    }
+    ```
+
+
+
+
+
+#### 3.3 注意事项说明
+- 难道要为每一个线程创建UncaughtExceptionHandler吗？
+    - 应用程序通常都会创建很多线程，如果为每一个线程都设置一次 UncaughtExceptionHandler 未免太过麻烦。
+    - 既然出现未处理异常后 JVM 最终都会调 getDefaultUncaughtExceptionHandler()，那么我们可以在应用启动时设置一个默认的未捕获异常处理器。即调用Thread.setDefaultUncaughtExceptionHandler(handler)
+- setDefaultUncaughtExceptionHandler被调用多次如何理解？
+    - Thread.setDefaultUncaughtExceptionHandler(handler) 方法如果被多次调用的话，会以最后一次传递的 handler 为准。
+    - 所以如果用了第三方的统计模块，可能会出现失灵的情况。对于这种情况，在设置默认 handler 之前，可以先通过 getDefaultUncaughtExceptionHandler() 方法获取并保留旧的 handler，然后在默认 handler 的uncaughtException 方法中调用其他 handler 的 uncaughtException 方法，保证都会收到异常信息。
+
+
+#### 3.5 理解异常栈轨迹链
+
+
+### 04.崩溃监听思路
+#### 4.1 实现崩溃监听
+- handler将会报告线程终止和不明原因异常这个情况，如果没有自定义handler， 线程管理组就被默认为报告异常的handler。
+    - ThreadHandler 这个类就是实现了UncaughtExceptionHandler这个接口，伪代码代码如下所示
+    ``` java
+    public class ThreadHandler implements Thread.UncaughtExceptionHandler {
+        private Thread.UncaughtExceptionHandler mDefaultHandler;
+        @Override
+        public void uncaughtException(Thread t, Throwable e) {
+            if (mDefaultHandler != null) {
+                //当给定的线程因为发生了未捕获的异常而导致终止时将通过该方法将线程对象和异常对象传递进来。
+                mDefaultHandler.uncaughtException(t, e);
+            } else {
+                //否则自己处理
+            }
+        }
+        public void init(Application ctx) {
+            mDefaultHandler = Thread.getDefaultUncaughtExceptionHandler();
+            Thread.setDefaultUncaughtExceptionHandler(this);
+        }
+    }
+    ```
+
+
+
+#### 4.2 处理捕获异常
+
+
+
+#### 4.4 崩溃日志收集
+
+
+
+#### 4.8 崩溃重启实践
 
 
 ### 01.概述
