--- a/Read/ReadMeWiki/00.方案实践/07.App磁盘沙盒工具实践.md
+++ b/Read/ReadMeWiki/00.方案实践/07.App磁盘沙盒工具实践.md
@@ -49,12 +49,16 @@
 
 #### 1.3 设计目标
 - 可视化界面展示
-    - 
+    - ![在这里插入图片描述](https://img-blog.csdnimg.cn/cccea61a47ed43ef88ec3f335f84ab0b.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5p2o5YWF,size_14,color_FFFFFF,t_70,g_se,x_16)
+    - ![在这里插入图片描述](https://img-blog.csdnimg.cn/81e1797d2220499cae25b90c932d1092.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5p2o5YWF,size_15,color_FFFFFF,t_70,g_se,x_16)
+    - ![在这里插入图片描述](https://img-blog.csdnimg.cn/2752b6b0e866402f8e76c8c544028de0.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5p2o5YWF,size_15,color_FFFFFF,t_70,g_se,x_16)
+    - ![在这里插入图片描述](https://img-blog.csdnimg.cn/221754c0dd7b4c028d5f0a122bdecd18.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5p2o5YWF,size_15,color_FFFFFF,t_70,g_se,x_16)
 - 多种处理文件操作
     - 针对file文件夹，或者file文件，长按可以出现弹窗，让测试选择是否删除文件。
     - 点击file文件夹，则拿到对应的文件列表，然后展示。点击file直到是具体文件(文本，图片，db，json等非file文件夹)跳转详情。
 - 一键接入该工具
     - FileExplorerActivity.startActivity(MainActivity.this);
+    - 开源项目地址：https://github.com/yangchong211/YCAndroidTool
 
 
 ### 02.Android存储基本概念
@@ -474,7 +478,7 @@
     ```
 - 第二步，添加路径映射表
     - 在/res/ 下建立xml 文件夹，然后再创建对应的映射表(xml)，最终路径如下：/res/xml/file_explorer_provider.xml。
-    ```
+    ``` java
     <paths>
         <!--FileProvider需要读取映射表。-->
         <external-cache-path name="external_cache" path="." />
@@ -551,7 +555,7 @@
     - 3、应用A使用FileProvider通过映射表将Uri转为Path，并构造出文件描述符。
     - 4、应用A将文件描述符返回给应用B，应用B就可以读取应用A发送的文件了。
 - 整个交互流程图如下
-    - 
+    - ![image](https://img-blog.csdnimg.cn/35b355a6c5b04e10984fb55c57870607.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5p2o5YWF,size_20,color_FFFFFF,t_70,g_se,x_16)
 
 
 ### 05.其他设计实践说明
@@ -624,4 +628,6 @@
     }
     ```
 
+
+### demo地址：https://github.com/yangchong211/YCAndroidTool
 
