--- a/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
@@ -28,6 +28,7 @@
     - 熟悉一些常用设计模式，比如单利模式，builder模式，工厂模式，订阅者模式，并且运用于实践项目开发中等等。
     - 熟悉glide加载图片压缩，三级缓存，同异步加载，对象池优化，低内存条件优化，优化加载list条目图片等等。
     - 熟悉webView的加载url的流程，异常处理，WebView缓存优化，以及白名单处理，loadUrl请求服务器资源的流程。
+    - 熟悉App应用程序崩溃流程和原理，熟悉应用卡顿监控方式Printer和WatchDog，尝试解决top1崩溃问题。
     - 能够通过一些工具，辅助开发或者测试提高效率，比如在外卖骑手端，开发地图mock工具，导航mock工具，隔离解耦业务代码。比如贡献磁盘缓存查看工具，方便测试测试磁盘缓存。
 - 高级技术点
     - 熟悉Android组件化开发，将公司项目一步步改造成组件化开发，熟悉业务分层，功能拆分，跨组件通信，组件封装，复用多条业务App。
@@ -41,7 +42,7 @@
     - 按时按量完成需求开发，bug<3，线上工单<3/年，优化地图&导航异常降级，完善核心链路技术埋点，完善监控体系。
     - 快速适应flutter混合开发，承担地图&导航&定位&其他等模块大改版，不断拉齐Android和iOS两端差异化，承接基础业务开发。
     - 负责改版中flutter容器开发，地图业务channel通信，改造方案设计，地图&Flutter容器多点触摸事件分发处理。
-    - 开发磁盘缓存查看工具极大提高测试效率，开发地图mock各种场景工具，地图模拟行走工具，导航模拟行走工具，主要是辅助测试童鞋模拟国外业务场景测试，提高测试效率，有些提到了DoKit中。
+    - 开发磁盘缓存查看工具，极大提高测试效率，开发地图mock各种场景工具，地图模拟行走工具，导航模拟行走工具，主要是辅助测试童鞋模拟国外业务场景测试，提高测试效率，有些提到了DoKit中。
 - 在立思辰开发经历
     - 负责项目业务拆分，功能组件抽取，服务组件，以及基础组件的App代码开发。将多个app不断完善抽取分离组件化module，为后期开发定制app快速高效打下基础。
     - 通用视频播放器，用于4条业务线，开源star2k，解决视频播放器和业务耦合问题，以及多种业务场景播放，低耦合方便拓展，一键即可切换视频播放器内核。应用多个产品线……
