--- a/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
+++ b/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
@@ -23,23 +23,39 @@
         - 常识性bug，比如针对id使用long或者String，避免返回过长导致字段截取，出现不可预知的bug；比如之前对地图经纬度数据对比，修改直接使用double判断(精度丢失造成不准)
         - 范型，主要是约束，编译器检查代码规范，封装base接口，需要用到范型。有哪些错误的范型使用，举例说明
         - 线程，生命周期，线程排查，优先级，name等等。线程的异常捕获问题，线程runnable 和callback问题
+        - 线程池，解决什么问题，有哪些，如何复用和管理线程
     - 对数据结构比如常见List，Map，Set，Deque，Stack等熟悉，能够结合实际场景选择合适的集合。
         - 比如说，针对activity任务栈管理，使用Stack管理；
         - 比如说，针对针对webView库，读取内存缓存资源，因为读远大于写，保证数据安全，选择CopyOnWriteArrayList；
         - 比如说，针对磁盘缓存file查看工具，采用Deque队列管理页面回退
-        - 主要是复习HashMap，LinkedHashMap(淘汰算法)
+        - 主要是复习HashMap，LinkedHashMap(淘汰算法)，还有线程安全的 ConcurrentHashMap ，主要是怎么保证线程安全和提高效率
     - 熟悉面向对象编程思想，熟练运用设计模式原则，写出高质量可复用，拓展性强，方便维护和阅读的代码，具体可见技术产出库。
+        - 比方说，设计了通用视频播放器，
+        - 比方说，
     - 熟悉Http协议，熟悉常用状态码，知道https请求传输数据过程，较为熟悉网络协议知识点，开发过网络请求拦截日志信息工具，有接口健壮性自测能力。
+        - 比如说，开发网络拦截工具，低流量
+        - 接口健壮性自测，熟练mock数据，针对返回类型，比如字符串，空数据，长字符串，有数据，null处理。int，对象，数据
     - 熟悉Android中四大组件，Handler通信机制，IPC机制，Window，AMS，WMS，等基础原理，并实际开发灵活运用。
 - 中高级技术点
     - 熟悉一些常用设计模式，比如单利模式，builder模式，工厂模式，订阅者模式，并且运用于实践项目开发中等等。
+        - 比如构造复杂的对象，使用builder模式
+        - 比如切换不同视频内核，采用工厂模式，
+        - 比如说，在写地图业务时候，到户/到店/手动单/全览添加定位距离校验，采用了订阅者模式，
     - 熟悉glide加载图片压缩，三级缓存，同异步加载，对象池优化，低内存条件优化，优化加载list条目图片等等。
+    - 熟悉应用程序崩溃流程和原理，熟悉应用卡顿监控方式Printer和WatchDog，尝试解决top1崩溃问题。
     - 熟悉webView的加载url的流程，异常处理，WebView缓存优化，以及白名单处理，loadUrl请求服务器资源的流程。
     - 能够通过一些工具，辅助开发或者测试提高效率，比如在外卖骑手端，开发地图mock工具，导航mock工具，隔离解耦业务代码。比如贡献磁盘缓存查看工具，方便测试测试磁盘缓存。
 - 高级技术点
     - 熟悉Android组件化开发，将公司项目一步步改造成组件化开发，熟悉业务分层，功能拆分，跨组件通信，组件封装，复用多条业务App。
-    - 懂得一些Crash治理，事前针对常见崩溃总结和review代码规范，事中及时止损或者降级，同时维护崩溃监控库日志记录。
     - 熟悉组件化开发，模块分层，在立思辰承接多个app组件化抽离复用，提高开发效率，为后期多个定制开发平板app提供高效支持。
+    - 懂得一些Crash治理，事前针对常见崩溃总结和review代码规范，事中及时止损或者降级，同时维护崩溃监控库日志记录。
+        - crash治理准则，由点到面，不能随便catch，预防大于治疗
+        - 常见crash，空指针，索引越界，转化异常等，对象非空判断，封装adpater刷新数据，基本数据类型转化catch，主要是总结梳理文档，避免不规范代码异常
+        - 系统crash，思路排查是否是代码使用层面问题，找可疑代码，找到去hook，或者依赖降级，最难的是反编译
+            - 针对hook，举个例子，解决toast在7.1手机崩溃，找到崩溃点，分析原理，定位到hook代码，通过反射去hook
+            - top1崩溃解决，补充思路
+        - oom带来的crash，这个不好治理，避免内存泄露，根治大对象，图片优化(大图检测，bitmap缓存)
+        - crash止损，灰度放量，业务降级(比如之前地图在墨西哥某款手机大量崩溃后针对那类机型降级)，
     - 懂得一些App稳定性治理，通过崩溃监控，核心链路埋点，降级处理，异常设计，代码串讲，技术复盘等手段，达到app稳定性指标。
 
 
